my-chart/templates/service.yaml
# Service for Nest.js application
apiVersion: v1
kind: Service
metadata:
  name: my-nest-app-service
spec:
  selector:
    app: my-nest-app
  type: LoadBalancer
  ports:
    - port: 3001
      targetPort: 3001
---
# Service for MongoDB
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
---
# Service for Redis
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
    app: redis
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
