my-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: yourdomain.com
      http:
        paths:
          - path: /reactapp
            pathType: Prefix
            backend:
              service:
                name: my-react-app-service
                port:
                  number: 80
          - path: /nestapp
            pathType: Prefix
            backend:
              service:
                name: my-nest-app-service
                port:
                  number: 80
          - path: /mongodb
            pathType: Prefix
            backend:
              service:
                name: mongodb-service
                port:
                  number: 27017
          - path: /redis
            pathType: Prefix
            backend:
              service:
                name: redis
                port:
                  number: 6379
